--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
 </head>
 <body>
     <div class="layout">
-        <div class="topSpace"></div>	
-        <div class="leftSpace">
-            <span>Q Екатеринбург</span>
+        <div class="top-space"></div>	
+        <div class="left-space">
+            <span>↗ Екатеринбург</span>
         </div>	
-        <div class="rightSpace">
-            <div class="userCard">
+        <div class="right-space">
+            <div class="user-card">
                 <span class="bold">login</span><br>
                 <span>Почта</span>
                 <span class="bold">184</span>
             </div>
         </div>	
         <div class="news">
-            <div class="newsTitle">
-                <div class="smi"><span>Сегодня в СМИ</span></div>
-                <div class="region"><span>в Екатеринбурге</span></div>
-                <div class="date"><span>19 ноября, воскресенье 14:10</span></div>
+            <div class="news-title">
+                <div class="smi">Сегодня в СМИ</div>
+                <div class="region">в Екатеринбурге</div>
+                <div class="date">19 ноября, воскресенье 14:10</div>
             </div>
-            <div class="newsContent">
-                <span>Климкин рассказал о полученном от Трампа «месседже солидарности»</span>
-                <span>Появилось видео первого полета «летающего радара» А-100</span>
-                <span>СМИ узнали о планах США выделить Украине 47 млн долларов на оружие</span>
-                <span>«Серьезные вопросы»: Эрдоган усомнился в возможности доверять НАТО</span>
-                <span>С пропавшей аргентинской подлодки получены семь сигналов</span>
-            </div>
-            <div class="newsFin">
+            <ul class="news-content">
+                <li>Климкин рассказал о полученном от Трампа «месседже солидарности»</li>
+                <li>Появилось видео первого полета «летающего радара» А-100</li>
+                <li>СМИ узнали о планах США выделить Украине 47 млн долларов на оружие</li>
+                <li>«Серьезные вопросы»: Эрдоган усомнился в возможности доверять НАТО</li>
+                <li>С пропавшей аргентинской подлодки получены семь сигналов</li>
+            </ul>
+            <div class="news-fin">
                 <div>
                     <span>USD ЦБ</span>
                     <span>59,63</span>
@@ -53,7 +53,7 @@
             >
         </div>
         <div class="search">
-            <div class="searchTitle">
+            <div class="search-title">
                 <div><span>Видео</span></div>
                 <div><span>Картинки</span></div>
                 <div><span>Новости</span></div>
@@ -62,15 +62,15 @@
                 <div><span>Переводчик</span></div>
                 <div><span>ещё</span></div>
             </div>
-            <div class="searchInput">
+            <div class="search-input">
                 <input class="input" type="text">
                 <div class="button">Найти</div>
                 <div class="arrow"></div>
             </div>
-            <div class="searchHelp">
+            <div class="search-help">
                 <div>
                     <span>Найдётся всё. Например,</span>
-                    <span class="linkTo">самое высокое дерево в мире</span>
+                    <span class="link-to">самое высокое дерево в мире</span>
                 </div>
                 <div>
                     <span>🚀   Красивый и быстрый браузер</span>
@@ -79,95 +79,81 @@
         </div>
         <div class="advert"></div>
         <div class="info1">
-            <div class="infoBox poseshaemoe">
-                <span class="titleBlue">Посещаемое</span>
+            <div class="info-box poseshaemoe">
+                <span class="title-blue">Посещаемое</span>
                 <div>
-                    <span>Маркет</span>
-                    <span>-</span>
-                    <span>китайская распродажа</span>
+                    <strong>Маркет</strong> - китайская распродажа
                 </div>
                 <div>
-                    <span>Авто.ру</span>
-                    <span>-</span>
-                    <span>Туссан третьей серии</span>
+                    <strong>Авто.ру</strong> - Туссан третьей серии
                 </div>
                 <div>
-                    <span>Недвижимость</span>
-                    <span>-</span>
-                    <span>продажа студии</span>
+                    <strong>Недвижимость</strong> - продажа студии
                 </div>
                 <div>
-                    <span>Работа</span>
-                    <span>-</span>
-                    <span>охранником</span>
+                    <strong>Работа</strong> - охранником
                 </div>
                 <div>
-                    <span>Здоровье</span>
-                    <span>-</span>
-                    <span>врач на связи</span>
+                    <strong>Здоровье</strong> - врач на связи
                 </div>
                 <div>
-                    <span>Коллекции</span>
-                    <span>-</span>
-                    <span>как мелировать волосы</span>
+                    <strong>Коллекции</strong> - как мелировать волосы
                 </div>
                 <div>
-                    <span>Авиабилеты</span>
-                    <span>-</span>
-                    <span>из Екатеринбурга</span>
+                    <strong>Авиабилеты</strong> - из Екатеринбурга
                 </div>
             </div>
-            <div class="infoBox anekdot">
-                <span class="titleBlue">Лучшие анекдоты</span>
+            <div class="info-box anekdot">
+                <span class="title-blue">Лучшие анекдоты</span>
                 <div>
                     <span>Раздел:</span>
-                    <span class="linkTo">Медицинские</span>
+                    <span class="link-to">Медицинские</span>
                 </div>
                 <span>- Вас лечить хорошо или бесплатно?</span>
             </div>
-            <span class="linkTo">Q Показать еще?</span>
+            <span class="link-to">Q Показать еще?</span>
         </div>
         <div class="info2">
-            <div class="infoBox tv">
-                <div class="tvTitle">
-                    <span class="titleBlue">Телепрограмма</span>
-                    <div class="gradientBox">ТВ онлайн</div>
+            <div class="info-box tv">
+                <div class="tv-title">
+                    <span class="title-blue">Телепрограмма</span>
+                    <div class="gradient-box">ТВ онлайн</div>
                 </div>
                 <div>
                     <span>16:00</span>
                     <span>Понять. Простить</span>
-                    <span class="linkTo">41 Домашний</span>
+                    <span class="link-to">41 Домашний</span>
                 </div>
                 <div>
                     <span>16:30</span>
                     <span>Место встречи</span>
-                    <span class="linkTo">НТВ</span>
+                    <span class="link-to">НТВ</span>
                 </div>
                 <div>
                     <span>16:30</span>
                     <span>Детективы</span>
-                    <span class="linkTo">Пятый канал</span>
+                    <span class="link-to">Пятый канал</span>
                 </div>
                 <div>
                     <span>16:30</span>
                     <span>Новости</span>
-                    <span class="linkTo">РЕН ТВ</span>
+                    <span class="link-to">РЕН ТВ</span>
                 </div>
                 <div>
                     <span>16:30</span>
                     <span>Гадалка</span>
-                    <span class="linkTo">ТВ-3</span>
+                    <span class="link-to">ТВ-3</span>
                 </div>
                 <div>
                     <span>16:30</span>
                     <span>Реальные пацаны</span>
-                    <span class="linkTo">ТНТ</span>
+                    <span class="link-to">ТНТ</span>
                 </div>
             </div>
-            <div class="infoBox">
-                <span class="titleBlue">Автомобильные новости</span>
-                <div class="shadowTop"></div>
-                <div class="prokrutka">
+            <div class="info-box">
+                <span class="title-blue">Автомобильные новости</span>
+                <div class="shadow-top"></div>
+                <div class="scroll">
                     <div>
                         <span>Обзор нового Mitsubishi за которым выстроилась очередь</span>
                         <span>12:01</span>
@@ -197,45 +183,45 @@
                         <span>12:01</span>
                     </div>
                 </div>
-                <div class="shadowTop"></div>
+                <div class="shadow-top"></div>
             </div>
         </div>
         <div class="info3">
-            <div class="infoBox weather">
-                <span class="titleBlue">Погода</span>
+            <div class="info-box weather">
+                <span class="title-blue">Погода ❄️</span>
                 <span>Вечер -5, ночь -7</span>
             </div>
-            <div class="infoBox probka">
-                <span class="titleBlue">Пробки</span>
+            <div class="info-box probka">
+                <span class="title-blue">Пробки ⭕️</span>
                 <span>Местами затруднения</span>
             </div>
-            <div class="infoBox maps">
-                <span class="titleBlue">Карты Екатеринбурга</span>
+            <div class="info-box maps">
+                <span class="title-blue">Карты Екатеринбурга</span>
                 <span>Такси</span>
                 <span>Расписания</span>
                 <span>Междугородние автобусы</span>
             </div>
-            <div class="infoBox afisha">
-                <span class="titleBlue">Афиша</span>
+            <div class="info-box afisha">
+                <span class="title-blue">Афиша</span>
                 <div>
                     <span>Субурбикон</span>
-                    <span class="linkTo">премьера в чт</span>
+                    <span class="link-to">премьера в чт</span>
                 </div>
                 <div>
                     <span>Последний богатырь</span>
-                    <span class="linkTo">приключения</span>
+                    <span class="link-to">приключения</span>
                 </div>
                 <div>
                     <span>Фиксики: Большой секрет</span>
-                    <span class="linkTo">мультфильм</span>
+                    <span class="link-to">мультфильм</span>
                 </div>
                 <div>
                     <span>Тор: Рагнарёк</span>
-                    <span class="linkTo">фэнтези</span>
+                    <span class="link-to">фэнтези</span>
                 </div>
                 <div>
                     <span>Убийство в Восточном экспрессе</span>
-                    <span class="linkTo">драма</span>
+                    <span class="link-to">драма</span>
                 </div>
             </div>
         </div>
@@ -244,7 +230,7 @@
             src="https://clck.ru/CBCht"
             alt="box"
             >
-            <span class="titleBlue">32 ГБ студентам на Яндекс.Диске!</span>
+            <span class="title-blue">32 ГБ студентам на Яндекс.Диске!</span>
             <span>Бесплатно и навсегда</span>
         </div>
     </div>
